wip: Continue port to Minecraft 1.21.3